# tds-work

./: 2026-03-06-Note-19-48.xopp
1_FunctionCallStructured/: 1_NormalText.py  3_StructuredOutput.py
2_Embeddings/: 1_pdf_read.py  2_embeding.py  3_store_embedding_for_future.py  5_search.py  6_langchain.py  embeddings.npy
3_HuggingFaceDeploy/: Dockerfile  README.md  app.py
4_HuggingFaceDeploy2/: Dockerfile  README.md  app.py  main.py  pyproject.toml
5_RagChatBot/: agent.py  chat_model.py  database.py  main.py  pyproject.toml
Func/: 2_FunctionCalling.py  3_StructuredOutput.py
