[project]
name = "5-ragchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "pypdf>=6.9.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]
